--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=taskManagement
-spring.datasource.url=jdbc:postgresql://localhost:5433/tarefasdb
+spring.datasource.url=jdbc:postgresql://postgres:5432/tarefasdb
 spring.datasource.username=user1
 spring.datasource.password=12345
 spring.datasource.driver-class-name=org.postgresql.Driver
